--- a/api.raikaconsulting.com/.env.example
+++ b/api.raikaconsulting.com/.env.example
@@ -62,4 +62,8 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Frontend Configuration
+FRONTEND_URL=https://www.rayka.com
+CAPACITACION_LOGIN_PATH=/login
+
 VITE_APP_NAME="${APP_NAME}"
