--- a/rayka.com/package.json
+++ b/rayka.com/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.8",
     "@types/react-router-dom": "^5.3.3",
+    "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
