--- a/cursos.raikaconsulting.com/.env.production
+++ b/cursos.raikaconsulting.com/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://cursos.raikaconsulting.com/api/
+VITE_API_URL=https://api.cursos.raikaconsulting.com/api
 VITE_APP_NAME="Raika Cursos"
